--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,18 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+#Ignore xlsx
+*.xlsx
+
+#Ignore csv
+*.csv
+
+#Ignore pdf
+*.pdf
+
+#Ignore rds
+*.rds
+
+#Ignore png
+*.png
